# demo-projects

./: .gitignore  Cargo.toml  ReadMe.md
.github/other/: check-example.sh  retry.sh
.github/workflows/: ci.yml
dodge-the-creeps/godot/: Main.tscn  Player.tscn  export_presets.cfg  project.godot  rust.gdextension  rust.gdextension.uid
dodge-the-creeps/rust/: Cargo.toml  build-wasm.sh
dodge-the-creeps/rust/.cargo/: config.toml
dodge-the-creeps/rust/src/: hud.rs  main_scene.rs  mob.rs  player.rs
hot-reload/godot/: project.godot  rust.gdextension  rust.gdextension.uid
hot-reload/rust/: Cargo.toml
hot-reload/rust/src/: lib.rs
net-pong/: README.md
net-pong/godot/: ball.tscn  lobby.tscn  paddle.tscn  pong.tscn  project.godot  rust.gdextension
net-pong/rust/: Cargo.toml
net-pong/rust/src/: ball.rs  lib.rs  lobby.rs  paddle.rs  pong.rs
squash-the-creeps/godot/: RustScripts.gdextension  RustScripts.gdextension.uid  main.tscn  mob.tscn  music_player.tscn  player.tscn  project.godot  rust.gdextension  rust.gdextension.uid
squash-the-creeps/godot/.godot/: extension_list.cfg
squash-the-creeps/rust/: Cargo.toml  README.md  build-wasm.sh  cheatseet.txt
squash-the-creeps/rust/.cargo/: cargo.toml
squash-the-creeps/rust/src/: lib.rs  main_scene.rs  mob.rs  player.rs  scorelabel.rs
